--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="welcome to calculator"
+            android:text="Welcome to calculator"
+            android:textColor="#000"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:textSize="50dp"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textSize="50dp" />
 
 
 
 
         <Button
             android:id="@+id/swit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
