--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="basic" />
+        android:title="Basic" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="equation"/>
+        android:icon="@drawable/two"
+        android:title="Two equation"/>
 
     <item
         android:id="@+id/navigation_three"
-        android:icon="@drawable/download"
-        android:title="three var equation"/>
+        android:icon="@drawable/three"
+        android:title="Three var equation"/>
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="under maintenance" />
+        android:icon="@drawable/developer"
+        android:title="About Developer" />
 
 </menu>
